// tag::header[]
[width=100%,cols="10%, 30%, 60%", frame=none, grid=rows, options="header"]
|===
| *Date* | *Solution Area* | *Description of change*
// end::header[]
/ tag::ent-db[]
| 09/20/2024 | Database | New TR-4998: Oracle HA in AWS EC2 with Pacemaker Clustering and FSx ONTAP
// end::ent-db[]
// tag::hyperv[]
| 09/17/2025 | Virtualization | Add solutions for Hyper-V: SnapMirror Active Sync with stretch clusters
// end::hyperv[]
// tag::containers[]
| 09/13/2024 | Red Hat OpenShift Virtualization | Added Best Practices Guide for OpenShift VMs
// end::containers[]
// tag::vmware[]
| 08/23/2024 | Virtualization | Added VMFS Deployment Guide
// end::vmware[]
// tag::ent-db[]
| 08/23/2024 | Database | New TR-4997: Oracle RAC Deployment and Protection in VCF with vVols
// end::ent-db[]
// tag::hmc[]
| 08/16/2024 | Hybrid Cloud | Added DR using BlueXP DRaaS for NFS datastores solution
| 08/16/2024 | Hybrid Cloud | Added DR using BlueXP DRaaS for VMFS datastores solution
// end::hmc[]
// tag::ent-db[]
| 07/31/2024 | Database | New TR-4996: Oracle SI Deployment and Protection in VCF with vVols
// end::ent-db[]
// tag::ent-db[]
| 06/05/2024 | Database | New TR-4992: Simplified, Automated Oracle Deployment on NetApp C-Series with NFS
// end::ent-db[]
// tag::vmware[]
| 05/14/2024 | Virtualization | Added migration of VMs to Amazon EC2 using FSxN content
// end::vmware[]
// tag::hyperv[]
| 05/10/2024 | Virtualization | Added deployement of Hyper-V on NetApp content
// end::hyperv[]
// tag::ent-db[]
| 05/01/2024 | Database | New Oracle Sizing Guidance for Azure NetApp Files
// end::ent-db[]
// tag::containers[]
| 04/19/2024 | Red Hat OpenShift Virtualization | Added new content for CI integration for VMs in OpenShift Virtualization
// end::containers[]
// tag::containers[]
| 04/16/2024 | Red Hat OpenShift Virtualization | Added new content for data protection of VMs in OpenShift Virtualization
// end::containers[]
// tag::ent-db[]