@@ -76,14 +76,12 @@ indexpage:
 #
     - title: "SnapCenter for Databases"
       links:
+        - title: "PostgreSQL Database Backup, Recovery, and Clone on ONTAP with SnapCenter"
+          url: /snapctr_psql_ontap.html
         - title: "SnapCenter Oracle Clone Lifecycle"
           url: /automation_ora_clone_lifecycle.html
         - title: "Oracle Database Backup, Recovery, and Clone on ANF with SnapCenter"
           url: /snapctr_ora_azure_anf.html    
-        - title: "Oracle Backup, Restore and Clone with SnapCenter Services - Azure" 
-          url: /snapctr_svcs_ora_azure.html     
-        - title: "Oracle Backup, Restore and Clone with SnapCenter Services - AWS" 
-          url: /snapctr_svcs_ora.html         
         - title: "Hybrid Cloud Database Solutions with SnapCenter"
           url: /hybrid_dbops_snapcenter_usecases.html
 #
