@@ -137,6 +137,8 @@ entries:
 #      
   - title: "SnapCenter for Databases"
     entries:
+      - title: "PostgreSQL Backup, Recovery, and Clone on ONTAP"
+        url: /databases/snapctr_psql_ontap.html
       - title: "SnapCenter Oracle Clone Lifecycle"
         url: /databases/automation_ora_clone_lifecycle.html
       - title: "Oracle Database Backup, Recovery, and Clone on ANF"
