@@ -3,7 +3,13 @@
 |===
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
-/ tag::ent-db[]
+// tag::ent-db[]
+| 10/14/2024 | Database | New TR-5000: PostgreSQL Database Backup, Recovery, and Clone on ONTAP with SnapCenter
+// end::ent-db[]
+// tag::ent-db[]
+| 10/14/2024 | Database | Customer Case Study: Medical Products Firm Migrates On-prem SQL Workload to Amazon FSx ONTAP to Reduce Cost
+// end::ent-db[]
+// tag::ent-db[]
 | 09/20/2024 | Database | New TR-4998: Oracle HA in AWS EC2 with Pacemaker Clustering and FSx ONTAP
 // end::ent-db[]
 // tag::hyperv[]
